# velma_robot

./: aktualizuj.bash
two_lwr_bringup/: mainpage.dox
two_lwr_machine/: mainpage.dox  manifest.xml  two_lwr.machine
velma_bringup/: CMakeLists.txt  manifest.xml  package.xml
velma_defs/: mainpage.dox  manifest.xml
velma_description/: CMakeLists.txt  package.xml
velma_description/calibration/: default_cal.xml  head_kinect_rgb.yaml  pgr_left.yaml  pgr_right.yaml
velma_description/defs/: base_imu.urdf.xacro  camera.urdf.xacro  head.urdf.xacro  head_dh.urdf.xacro  kinect_camera.urdf.xacro  monokl.urdf.xacro  torso.urdf.xacro  torso_mobile.urdf.xacro  wewucho.urdf.xacro
velma_description/launch/: description_test.launch  upload_robot.launch  upload_torso.launch
velma_description/meshes/: base_asm.STL  base_asm_simplified.STL  connector.STL  gripper_mount.STL  gripper_mount_simplified.stl  head_base.STL  head_base_simplified.STL  head_pan.STL  head_pan_simplified.STL  head_tilt.STL  head_tilt_simplified.STL  head_top.STL  head_top_simplified.STL  imu_case_right.stl  top_base_asm.STL  torso_base.STL
velma_description/meshes/collision/: connector2_collision.STL  connector_collision.STL  gripper_mount_collision.STL  gripper_mount_collision2.STL  head_base_collision.STL  head_top_collision.STL  top_base_asm_collision.STL  torso0_collision.stl  torso_base_collision.STL
velma_description/robots/: torso.urdf.xacro  velma.srdf  velma.urdf.xacro  velma_export.urdf.xacro  velma_mobile.srdf  velma_no_hands.srdf  velma_simplified.srdf
velma_machine/: velma.machine  (+1 more)
(+31 files in other folders)
